[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-dp-sa"
version = "1.0.0"
description = "Federated Learning: FedAvg vs Power of Choice with Fashion-MNIST"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fl_dp_sa"]

[tool.hatch.build.targets.sdist]
include = [
    "/fl_dp_sa",
    "/README.md",
]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "fl_dp_sa.server_app:app"
clientapp = "fl_dp_sa.client_app:app"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 100
